--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/ikeisuke/node-easy-concurrent-stream/issues"
   },
-  "homepage": "https://github.com/ikeisuke/node-easy-concurrent-stream#readme"
+  "homepage": "https://github.com/ikeisuke/node-easy-concurrent-stream#readme",
+  "devDependencies": {
+    "benchmark": "^2.1.1",
+    "mocha": "^3.0.2",
+    "tempfile": "^1.1.1"
+  }
 }
